loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:31: error: not found: value orange
if (!orange){
     ^